sửa phần đăng nhập, đăng ký, chỉnh admin